# gui

./: .gitignore  CMakeLists.txt  bump_version.sh  resources.qrc
include/: mainwindow.h  version.h
src/: main.cpp  mainwindow.cpp
